--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -235,3 +235,16 @@ box-shadow: 0 0 25px 0 rgba(20, 27, 201, .05);
 cursor: pointer;
 background-image: linear-gradient(-45deg, #27b88d 0%, #22dd73 100%)
 }
+
+.job-container{
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  margin:20px;
+  }
+  .job-corner{
+  display: flex !important;
+  align-items: center;
+  justify-content:space-between;
+  margin: 10px;
+  }
