--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -248,3 +248,7 @@ background-image: linear-gradient(-45deg, #27b88d 0%, #22dd73 100%)
   justify-content:space-between;
   margin: 10px;
   }
+
+  .container-m{
+    display: flex !important;
+  }
